syntax = "proto3";
package gopi;

import "google/protobuf/empty.proto";
import "google/protobuf/duration.proto";

// The service discovery service definition
service Discovery {
  // Simple ping method to show server is "up"
  rpc Ping (google.protobuf.Empty) returns (google.protobuf.Empty);

  // Registers a service record
  rpc Register (ServiceRecord) returns (google.protobuf.Empty);

  // Looks up service records
  rpc Lookup (LookupRequest) returns (LookupReply);

  // Removes a service record
  rpc Remove (LookupRequest) returns (google.protobuf.Empty);

  // Streams discovery events
  rpc StreamEvents (LookupRequest) returns (stream Event);
}

// Event type
enum EventType {
    EVENT_NONE = 0;
    EVENT_ADD = 1;
    EVENT_CHANGE = 2;
    EVENT_EXPIRE = 3;
    EVENT_REMOVE = 4;
}

// An RPCServiceRecord
message ServiceRecord {
    string name = 1;
    string type = 2;
    uint32 port = 3;
    repeated string txt = 4;
    string host = 5;
    repeated string ip4 = 6;
    repeated string ip6 = 7;
    google.protobuf.Duration ttl = 8;
}

// Filter for lookup, remove or stream
message LookupRequest {
    string name = 1;
    string type = 2;
    uint32 port = 3;
}

// Return zero or more service records
message LookupReply {
    repeated ServiceRecord service = 1;
}

// Monitor discovery changes
message Event {
    EventType type = 1;
    ServiceRecord service = 2;
}
